# serializer version: 1
# name: TestFeatureDepOptional.test_feature_spec_version_changes_when_optional_changes
  dict({
    'optional': 'd6b761423f5158b9b32144ae4cd27f2b620a6cf681d2d44e0a9c7be56d3c122a',
    'required': 'c1734810788203cee6b852199091bfac258c21dc54806f30a972dcfa011937fc',
  })
# ---
# name: TestFeatureDepOptional.test_optional_false_serializes_correctly
  dict({
    'columns': None,
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': False,
    'rename': None,
    'sql_filters': None,
  })
# ---
# name: TestFeatureDepOptional.test_optional_true_serializes_correctly
  dict({
    'columns': None,
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': True,
    'rename': None,
    'sql_filters': None,
  })
# ---
